--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -15,13 +15,37 @@
 }
 
 .a-right{
-    flex:1;
+    flex:1.3;
+    display: flex;
+    align-items: center;
+    /* justify-content: center; */
+    /* justify-content: space-between; */
+    position: relative;
+    height: 100%;
+    /* align-items: center; */
+    /* background-color: red; */
+}
+
+.about-titles{
+    width:100%;
+  
+    display: flex;
+    align-items: center;
+
+    /* background-color: pink; */
+}
+
+.a-title{
+    align-items: center;
+    display: flex;
+    margin-left: 33%;
+    font-size: 35px;
 }
 
 .a-card.bg{
     position: absolute;
-    top: 50px;
-    left: 50px;
+    top: 160px;
+    left: 60px;
     background-color: #333;
 }
 
@@ -31,6 +55,8 @@
     border-radius: 30px;
     position: absolute;
     overflow: hidden;
+    top: 120px;
+    left: 110px;
 }
 
 .a-img{
@@ -38,9 +64,66 @@
     /* width: 45%; */
     height: 100%;
     width:100%;
+    /* padding: 100px 100px; */
     /* position: absolute; */
     object-fit: cover;
     border-radius: 30px;
 }
 
+.a-right-wrapper{
+    padding: 10px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    /* justify-content: space-between; */
+    /* justify-content: space-around; */
+    padding-top: 120px;
+    /* background-color: red; */
+}
+.me-cards{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    /* background-color: purple; */
+    height: 75vh;
+    /* top:5px; */
+    /* justify-content: center; */
+    /* justify-content: space-around; */
+   
+}
+.me-card1{
+    width: 750px;
+    height: 50px;
+    position: relative;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-right: 15px;
+    top: 50px;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: #333;
+    display: flex;
+    height: auto;
+    overflow: hidden;
+    
+    border-radius: 20px;
+}
+.card-icon{
+    flex:1;
+    flex:0cm;
+    color: #5eb75a;
+    animation: grow 3s infinite;
+}
+.icon-exp{
+    color: rgb(171, 165, 165);
+}
+.a-desc{
+    color: white;
+    flex: 7; 
+}
 
+@keyframes grow {
+    0% { transform: scale(1); }
+    50% { transform: scale(0.8);   }
+    100% { transform: scale(1); }
+}
