--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -43,14 +43,14 @@
 
 .i-title-wrapper{
     height: 100%;
-    animation: move 10s ease-in-out infinite alternate;
+    animation: scroll 10s ease-in-out infinite alternate;
 }
 
-@keyframes move {
-    25%{transform: translateY(-50px)}
-    50%{transform: translateY(-100px)}
-    75%{transform: translateY(-150px)}
-    100%{transform: translateY(-200px)}
+@keyframes scroll {
+    25%{transform: translateY(100%)}
+    50%{transform: translateY(100%)}
+    75%{transform: translateY(100%)}
+    100%{transform: translateY(100%)}
 }
 
 .i-title-item{
@@ -74,7 +74,7 @@
 
 .i-img{
     /* background-color: black; */
-    width: 120%;
+    width: 100%;
     height: 100%;
     object-fit: cover;
     position: absolute;
@@ -88,6 +88,7 @@
     position: absolute;
     top: 0;
     bottom:0;
+    left:40px;
     /* padding-left: 600px; */
     overflow: hidden;
     
