--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -1,6 +1,7 @@
 .i{
     display:flex;
     height: 100vh;
+    background-color: white;
 }
 
 .i-left{
@@ -95,7 +96,7 @@
 }
 
 .i-scroll{
-    width: 40px;
+    width: 30px;
     height: 50px;
     top: 90%;
     position: absolute;
