--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -2,6 +2,7 @@
     height: 100vh;
     display: flex;
     align-items: center;
+    background-color: white;
 }
 
 .a-left{
@@ -38,14 +39,14 @@
 .a-title{
     align-items: center;
     display: flex;
-    margin-left: 33%;
-    font-size: 35px;
+    /* margin-left: 33%; */
+    font-size: 50px;
 }
 
 .a-card.bg{
     position: absolute;
     top: 160px;
-    left: 60px;
+    left: 70px;
     background-color: #333;
 }
 
@@ -85,11 +86,10 @@
     flex-direction: column;
     justify-content: space-between;
     /* background-color: purple; */
-    height: 75vh;
+    height: 65vh;
     /* top:5px; */
     /* justify-content: center; */
     /* justify-content: space-around; */
-   
 }
 .me-card1{
     width: 750px;
@@ -108,6 +108,26 @@
     
     border-radius: 20px;
 }
+
+.me-card-icons{
+    width: 750px;
+    height: 50px;
+    position: relative;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-right: 15px;
+    top: 50px;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: #333;
+    display: flex;
+    height: auto;
+    overflow: hidden;
+    
+    
+    border-radius: 20px;
+}
+
 .card-icon{
     flex:1;
     flex:0cm;
@@ -126,4 +146,13 @@
     0% { transform: scale(1); }
     50% { transform: scale(0.8);   }
     100% { transform: scale(1); }
+}
+
+.about-scroll{
+    /* display: flex; */
+    width: 30px;
+    height: 50px;
+    background-color: pink;
+    /* top: 80%; */
+    /* position: absolute; */
 }
