--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -89,7 +89,7 @@
     position: absolute;
     top: 0;
     bottom:0;
-    left:40px;
+    /* left:40px; */
     /* padding-left: 600px; */
     overflow: hidden;
     
