--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -16,7 +16,7 @@
 }
 
 .a-right{
-    flex:1.3;
+    flex:1.4;
     display: flex;
     align-items: center;
     /* justify-content: center; */
@@ -29,7 +29,7 @@
 
 .about-titles{
     width:100%;
-  
+    padding-top:90px;
     display: flex;
     align-items: center;
 
@@ -39,8 +39,12 @@
 .a-title{
     align-items: center;
     display: flex;
+    height: auto;
+    width: auto;
     /* margin-left: 33%; */
     font-size: 50px;
+    padding-bottom: 15px;
+    background-color: pink;
 }
 
 .a-card.bg{
@@ -72,33 +76,36 @@
 }
 
 .a-right-wrapper{
-    padding: 10px;
+    /* padding: 10px; */
     height: 100%;
     display: flex;
     flex-direction: column;
     /* justify-content: space-between; */
     /* justify-content: space-around; */
-    padding-top: 120px;
-    /* background-color: red; */
+    /* padding-top: 120px; */
+    background-color: red;
 }
 .me-cards{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    /* background-color: purple; */
-    height: 65vh;
-    /* top:5px; */
+    padding-right:70px;
+    width: auto;
+    background-color: purple;
+    height: 70vh;
+    /* top:50px; */
     /* justify-content: center; */
-    /* justify-content: space-around; */
+    /* justify-content: space-between; */
+    align-content: space-between;
 }
 .me-card1{
-    width: 750px;
-    height: 50px;
+    width: auto;
+    /* height: 50px; */
     position: relative;
     padding-top: 15px;
     padding-bottom: 15px;
     padding-right: 15px;
-    top: 50px;
+    /* top: 50px; */
     justify-content: space-evenly;
     align-items: center;
     background-color: #333;
@@ -110,13 +117,13 @@
 }
 
 .me-card-icons{
-    width: 750px;
+    width: auto;
     height: 50px;
     position: relative;
     padding-top: 15px;
     padding-bottom: 15px;
     padding-right: 15px;
-    top: 50px;
+    /* top: 50px; */
     justify-content: space-evenly;
     align-items: center;
     background-color: #333;
@@ -139,7 +146,7 @@
 }
 .a-desc{
     color: white;
-    flex: 7; 
+    flex: 6; 
 }
 
 @keyframes grow {
@@ -155,4 +162,13 @@
     background-color: pink;
     /* top: 80%; */
     /* position: absolute; */
+}
+
+@media screen and (max-width:480px) {
+    .a{
+        flex-direction: column;
+        text-align: center;
+    }
+    
+    
 }
