--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -207,28 +207,49 @@ a:hover{
     .i{
         flex-direction: column;
         size:auto;
+        position: relative;
+        /* width: 100%; */
         /* text-align: center; */
 
-        /* height: 100%; */
     }
 
-    .i-desc{
+    .i-left{
+        /* height: 600px !important; */
+        /* width: 100%;
+        position: relative; */
+        /* justify-content: ; */
+        align-items: flex-start;
+        padding-bottom: 25vh;
+    }
+    .i-right{
         display: none;
+        /* height:500% !important; */
+        position: relative;
+        height: 100%;
+        width: 100%;
+        /* position: absolute; */
+    }
+    .i-desc{
+        /* display: none; */
+        font-size: 17px;
+        text-align: center;
+        padding-bottom: 15px;
+        margin: 10px 10px;
     }
     .i-intro{
         font-size: 28px !important;
         font-weight: 100;
-        padding-top: 70px;
+        padding-top: 20px;
         /* display: flex; */
         text-align: center;
     }
     .i-name{
         font-size:35px;
-        padding-top: 10px;
+        padding-top: 3px;
         text-align: center;
     }
 
-    .i-scroll{ display: none;}
+    /* .i-scroll{ display: none;} */
     .i-title-item{
         overflow:hidden !important;
         font-size: 22px;
@@ -238,9 +259,18 @@ a:hover{
         padding: 1px;
         align-items: center;
         /* text-align: center; */
-        justify-content: space-around;
-        size: auto;
+        /* justify-content: space-around; */
+        height:750px;
+
         
+    }
+    .i-title{
+        /* justify-content: space-evenly; */
+        text-align: center;
+        align-items: center;
+        justify-content: center;
+        /* height:50px !important; */
+        /* display: flex; */
     }
 
     .bot-buts{
@@ -249,27 +279,30 @@ a:hover{
     }
     .i-button{
         max-width: auto;
-        font-size: 12px ;
+        font-size: 14px ;
     }
     .i-links{
         padding-bottom: 10px;
-        padding-top: 10px;
+        padding-top: 5px;
         /* max-width: 60%; */
     }
     .link_icon{
-        max-width: 25px;
+        max-width: 30px;
     }
     .i-right{
         height:auto;
     }
-
+    .i-scroll{
+        padding-top: 0px;
+        max-width: 25px;
+    }
     .i-img{
         /* padding-top: 20px; */
-        height:100%;
+        height:400px;
     }
     .i-bg{
-        height:100%;
-        display: flex;
+        height:400px;
+        /* display: flex; */
     }
 
     .i-cv{
@@ -278,5 +311,4 @@ a:hover{
     }
     
 
-    
 }
