--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -3,6 +3,7 @@
     display: flex;
     align-items: center;
     background-color: white;
+    /* position: absolute; */
 }
 
 .a-left{
@@ -12,7 +13,8 @@
     justify-content: center;
     position: relative;
     height: 100%;
-    /* background-color: red; */
+    background-color: green;
+    position: relative;
 }
 
 .a-right{
@@ -38,7 +40,7 @@
 
 .a-title{
     align-items: center;
-    display: flex;
+    /* display: flex; */
     height: auto;
     width: auto;
     /* margin-left: 33%; */
@@ -164,10 +166,102 @@
     /* position: absolute; */
 }
 
+
 @media screen and (max-width:480px) {
     .a{
         flex-direction: column;
+        /* size: auto; */
+        /* align-content: center; */
+        /* justify-content: center; */
+        position: relative;
+        display: flex;
+        width: auto;
+        height: auto;
+        /* text-align: center; */
+    }
+    .a-left{
+        display: flex;
+        size: auto;
+        justify-content: center;
+        align-content: center;
+        margin: 35px ;
+        margin-bottom: 100px;
+        position: relative;
+    }
+    .a-right{
+        position: relative;
+        display: flex;
+        /* height:auto; */
+        size: auto;
+    }
+    .card-icon{display: none;}
+
+    .a-card.bg{
+        position: absolute;
+        top: 8px;
+        left: -3px;
+        background-color: #333;
+        height: 500px;
+        width: 350px;
+        margin: 0px;
+        padding-top: 30px;
+        border-radius: 30px;
+      
+
+    }
+    
+    .a-card{
+        width: 350px;
+        height: 535px;
+        border-radius: 30px;
+        position: relative;
+        margin: -20px;
+        overflow: hidden;
+        top: 10px;
+        left:0px;
+        
+    }
+    .a-desc{
+        font-size: 14px;
+    }
+    .about-titles{
+        padding-top: 0px;
+        /* align-content: center !important; */
+        justify-content: center;
+    }
+    .a-title{
+        font-size: 30px;
+        padding-top: 15px;
+    }
+    .a-right-wrapper{
+        /* display: flex; */
+        /* size: auto; */
+        /* height: 100%; */
+        width: 100%;
+        height: auto;
+       
+        justify-content: center;
+        align-content: center;
+        /* position: relative; */
+        font-size: 12px;
+        position: relative;
+    }
+    .me-cards{
+        padding-right: 0px;
+        margin: 5% 5% 5% 5%; 
+        height:700px;
+
+    }
+    .me-card1{
+        /* overflow:scroll; */
         text-align: center;
+        justify-items: center;
+        align-content: center;
+        padding-left: 15px;
+    }
+
+    .why-wrapper{
+        width:100%;
     }
     
     
