--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -2,7 +2,7 @@
     height: 100vh;
     display: flex;
     align-items: center;
-    background-color: white;
+    /* background-color: white; */
     /* position: absolute; */
 }
 
@@ -13,7 +13,7 @@
     justify-content: center;
     position: relative;
     height: 100%;
-    background-color: green;
+    /* background-color: green; */
     position: relative;
 }
 
@@ -44,9 +44,11 @@
     height: auto;
     width: auto;
     /* margin-left: 33%; */
-    font-size: 50px;
+    font-size: 35px !important;
     padding-bottom: 15px;
-    background-color: pink;
+    text-shadow:   2px 3px #5eb75a;
+
+    /* background-color: pink; */
 }
 
 .a-card.bg{
@@ -85,7 +87,7 @@
     /* justify-content: space-between; */
     /* justify-content: space-around; */
     /* padding-top: 120px; */
-    background-color: red;
+    /* background-color: red; */
 }
 .me-cards{
     display: flex;
@@ -93,7 +95,7 @@
     justify-content: space-between;
     padding-right:70px;
     width: auto;
-    background-color: purple;
+    /* background-color: purple; */
     height: 70vh;
     /* top:50px; */
     /* justify-content: center; */
@@ -125,10 +127,11 @@
     padding-top: 15px;
     padding-bottom: 15px;
     padding-right: 15px;
+    padding-left: 15px;
     /* top: 50px; */
     justify-content: space-evenly;
     align-items: center;
-    background-color: #333;
+    /* background-color: #333; */
     display: flex;
     height: auto;
     overflow: hidden;
@@ -161,7 +164,7 @@
     /* display: flex; */
     width: 30px;
     height: 50px;
-    background-color: pink;
+    /* background-color: pink; */
     /* top: 80%; */
     /* position: absolute; */
 }
