--- a/src/components/why/why.css
+++ b/src/components/why/why.css
@@ -2,7 +2,7 @@
     display: flex;
     height: 100vh;
     width: 100%;
-    background-color:aqua;
+    /* background-color:aqua; */
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
@@ -13,7 +13,7 @@
     flex-direction: column;
     align-items: center;
     justify-content:space-between ;
-    background-color: purple;
+    /* background-color: purple; */
     position: relative;
 
 }
@@ -23,7 +23,7 @@
     height:100%;
     width:80%;
     align-items: center;
-    background-color: orange;
+    /* background-color: orange; */
     justify-content: space-between;
 }
 
@@ -34,7 +34,10 @@
     width: auto;
     text-align: center;
     margin-top: 40px;
-    background-color: pink;
+    text-shadow:   2px 3px #5eb75a;
+    
+
+    /* background-color: pink; */
 }
 
 
@@ -74,14 +77,14 @@
 } */
 
 .two-buttons{
-    background-color: red;
+    /* background-color: red; */
     height:auto;
     width:360px;
     display: flex;
     align-items: center;
     justify-content:space-evenly;
     /* position: relative; */
-    bottom: 90px;
+    /* bottom: 70px; */
 
     
 }
@@ -92,6 +95,7 @@
     border-radius: 12px;
     /* letter-spacing: 1px; */
     color: black;
+    box-shadow:  2px 4px 4px #5eb75a;
     /* position: absolute ; */
 }
 
@@ -105,8 +109,9 @@
     align-items: center;
     /* background-color: red; */
     display: flex;
-    background-color: grey;
-    padding-bottom: 60px;
+    /* background-color: grey; */
+    padding-bottom: 40px;
+    
 }
 
 
